--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,13 +11,24 @@
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
+    "@prisma/client": "6.3.0",
     "@repo/auth": "workspace:*",
+    "@repo/common": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@tailwindcss/postcss": "^4.0.14",
+    "axios": "^1.8.3",
+    "bcrypt": "^5.1.1",
     "next": "^15.2.1",
     "next-auth": "^4.24.11",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.1",
+    "tailwindcss": "^4.0.14",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
@@ -26,6 +37,7 @@
     "@types/node": "^22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
+    "daisyui": "^5.0.6",
     "eslint": "^9.22.0",
     "typescript": "5.8.2"
   }
