--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "@repo/common": "workspace:*",
     "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/bcrypt": "^5.0.2"
@@ -18,6 +19,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@auth/prisma-adapter": "^2.8.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "bcrypt": "^5.1.1",
     "next-auth": "^4.24.11"
   }
