--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -8,9 +8,10 @@
     "dev": "npm run build && npm run start"
   },
   "devDependencies": {
+    "@repo/auth": "workspace:*",
+    "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/ws": "^8.18.0",
-    "@repo/auth": "workspace:*"
+    "@types/ws": "^8.18.0"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "dotenv": "^16.4.7",
+    "ioredis": "^5.6.1",
     "next-auth": "^4.24.11",
     "web": "^0.0.2",
     "ws": "^8.18.1"
