--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
+    "@repo/redis": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/ws": "^8.18.0"
   },
